Update undoable demo to consider arrows on select

--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -134,7 +134,9 @@
                         {
                             selector: 'edge:selected',
                             style: {
-                                'line-color': 'black'
+                                'line-color': 'black',
+                                'source-arrow-color': 'black',
+                                'target-arrow-color': 'black',                                 
                             }
                         },
                         {
