show limits of color count

--- a/demo.html
+++ b/demo.html
@@ -511,6 +511,7 @@
                     }
                     document.getElementById('highlightColors').appendChild(o);
                   }
+                  document.getElementById('colorCountInp').value = colors.length;
                 }
                 
             });
