--- a/demo.html
+++ b/demo.html
@@ -520,21 +520,21 @@
         <div class="topnav">
             <b id="hide" style="cursor: pointer; color: brown">Hide Selected</b> / <b id="showAll" style="cursor: pointer; color: brown">Show All</b> <br/><br/>
 
-            <b id="highlightColor">Highlight Color Count:</b>
+            <b>Highlight Color Count:</b>
             <div class="m-1">
               <input type="number" min="4" max="32" id="colorCountInp" value="4">
-          </div>
+            </div>
 
-            <b id="highlightColor">Highlight Color:</b>
-
+            <b>Highlight Color:</b>
             <div class="m-1" id="colorShower">
                 <select id="highlightColors">
                 </select>
                 <input type="color" id="colorInp" style="display: none;">
                 <button id="colorChangerBtn">Change Color</button>
             </div>
+            <br/>
 
-            <b id="highlightElements" style="cursor: pointer; color: brown">Highlight Elements</b> <br/><br/>
+            <b id="highlightElements" style="cursor: pointer; color: brown">Highlight Selected</b> <br/><br/>
             <b id="highlightNeighbors" style="cursor: pointer; color: brown">Highlight Neighbors</b><br/><br/>
             <b id="showHiddenNeighbors" style="cursor: pointer; color: brown">Show Hidden Neighbors of Selected</b> <br/><br/>
             <b id="removeSelectedHighlights" style="cursor: pointer; color: brown">Remove Selected Highlights</b> <br/><br/>
