--- a/demo.html
+++ b/demo.html
@@ -469,7 +469,7 @@
                 });
 
                 document.getElementById('colorCountInp').addEventListener('change', function(e) {
-                  api.changeNumColor(e.target.value);
+                  api.changeNumHighlight(e.target.value);
                   addHighlightColorOptions();
                 });
 
