Update demo files

--- a/demo.html
+++ b/demo.html
@@ -115,7 +115,7 @@
               cursor: pointer;
             }
 */
-            ./*topnav input[type="color"]:hover
+            /*.topnav input[type="color"]:hover
             {
                border: 2px solid black;
             }*/
