--- a/demo-undoable.html
+++ b/demo-undoable.html
@@ -14,7 +14,7 @@
         <script src="https://unpkg.com/layout-base/layout-base.js"></script>
         <script src="https://unpkg.com/cose-base/cose-base.js"></script>
         <script src="https://unpkg.com/cytoscape-cose-bilkent/cytoscape-cose-bilkent.js"></script>
-        <script src="lib/cytoscape-undo-redo.js"></script>
+        <script src="https://unpkg.com/cytoscape-undo-redo/cytoscape-undo-redo.js"></script>
 
         <script src="cytoscape-view-utilities.js"></script>
 
