--- a/demo.html
+++ b/demo.html
@@ -256,7 +256,6 @@
                 }
 
                 document.getElementById("hide").addEventListener("click", function () {
-                    api.disableMarqueeZoom();
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     revertBorder(nodesWithHiddenNeighbor);
                     api.hide(cy.$(":selected"));
@@ -268,7 +267,6 @@
                 });
                 
                 document.getElementById("showAll").addEventListener("click", function () {
-                    api.disableMarqueeZoom();
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     revertBorder(nodesWithHiddenNeighbor);
                     api.show(cy.elements());
@@ -278,7 +276,6 @@
                 });
 
                 document.getElementById("showHiddenNeighbors").addEventListener("click", function () {
-                    api.disableMarqueeZoom();
                     var selectedNodes = cy.nodes(":selected");
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     revertBorder(nodesWithHiddenNeighbor);
@@ -291,7 +288,6 @@
                 });
 
                 document.getElementById("zoomToSelected").addEventListener("click", function () {
-                    api.disableMarqueeZoom();
                     var selectedEles = cy.$(":selected");
                     api.zoomToSelected(selectedEles);
                     if(document.getElementById('layout').checked){
@@ -330,7 +326,7 @@
                     nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     changeBorder(nodesWithHiddenNeighbor);
                     */
-                    api.disableMarqueeZoom();
+                    //api.disableMarqueeZoom();
                     var selectedNodes = cy.nodes(":selected");
                     var nodesWithHiddenNeighbor = cy.edges(":hidden").connectedNodes(':visible');
                     revertBorder(nodesWithHiddenNeighbor);
@@ -343,7 +339,6 @@
                 });
                 
                 document.getElementById("highlightNeighbors").addEventListener("click", function () {
-                    api.disableMarqueeZoom();
                     if (cy.$(":selected").length > 0) {
                       var idx = document.getElementById('highlightColors').selectedIndex;
                       api.highlightNeighbors(cy.$(":selected"), idx);
@@ -351,7 +346,6 @@
                 });
 
                 document.getElementById("highlightElements").addEventListener("click", function () {
-                    api.disableMarqueeZoom();
                     if (cy.$(":selected").length > 0) {
                       var idx = document.getElementById('highlightColors').selectedIndex;
                       api.highlight(cy.$(":selected"), idx);
@@ -359,13 +353,11 @@
                 });
 
                 document.getElementById("removeSelectedHighlights").addEventListener("click", function () {
-                    api.disableMarqueeZoom();
 										if(cy.$(":selected").length > 0)
                     	api.removeHighlights(cy.$(":selected"));
                 });
 
                 document.getElementById("removeAllHighlights").addEventListener("click", function () {
-                    api.disableMarqueeZoom();
                     api.removeHighlights();
                 });
 
@@ -452,9 +444,9 @@
             <b id="removeSelectedHighlights" style="cursor: pointer; color: brown">Remove Selected Highlights</b> <br/><br/>
             <b id="removeAllHighlights" style="cursor: pointer; color: brown">Remove All Highlights</b> <br/><br/>
             <b id="zoomToSelected" style="cursor: pointer; color: brown">Zoom to Selected</b><br/><br/>
-            <b id="marqueeZoom" style="cursor: pointer; color: brown">Marquee Zoom</b>
+            <b id="marqueeZoom" style="cursor: pointer; color: brown">Enable Marquee Zoom</b>
             <br/>
-            <span style="font-weight: normal !important; font-size: 14px !important;">Shift + drag to specify region; gets disabled after zoom, mouse events on canvas and other api functions calls</span>
+            <span style="font-weight: normal !important; font-size: 14px !important;">CTRL+Shift+Drag to specify the region</span>
             <br/><br/>
             <label for="layout" style="vertical-align:middle;">Rearrange on Hide/Show</label>
             <input type="checkbox" id="layout" name="layout" style="vertical-align:middle;" value="checked">
